--- a/app/restringidos.html
+++ b/app/restringidos.html
@@ -5,12 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>InterBox Cr</title>
+    <title>InterBox Cr | Restringidos</title>
     <link rel="icon" type="image/png" href="img/favico.png" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
-<body class="page f-fb">
+<body class="page">
 <header class="header fixed-top">
     <div class="sub-header">
         <div class="container">
@@ -35,56 +35,54 @@
         </div>
     </div>
 </header>
-<div class="banner">
-    <div class="main-banner text-center">
-        <div class="sub-back"></div>
-        <div class="container">
-            <h1>Bienvenido a International Box CR</h1>
-            <h5>Transporte de cargas simple, veloz y económico</h5>
+<div class="container">
+    <section class="restriction">
+        <div class="title-box">
+            <div class="title-box-b"></div>
+            <h3 class="title-text"></h3>
         </div>
-    </div>
-</div>
-<section class="services py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-6 col-sm-6 col-md-3 mb-2 mb-md-0">
-                <div class="card text-center service-card">
-                    <div class="card-body">
-                        <i class="fas fa-plane"></i>
-                        <p class="service-text">Despacho aereo diario de USA  a Costa Rica</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-3 mb-2 mb-md-0">
-                <div class="card text-center service-card">
-                    <div class="card-body">
-                        <i class="fas fa-shield-alt"></i>
-                        <p class="service-text">Todas tus compras con nosotros viajan aseguradas</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-3 mb-2 mb-md-0">
-                <div class="card text-center service-card">
-                    <div class="card-body">
-                        <i class="fas fa-people-carry"></i>
-                        <p class="service-text">Entregamos en la puerta de tu casa u oficina</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-3 mb-2 mb-md-0">
-                <div class="card text-center service-card">
-                    <div class="card-body">
-                        <i class="fas fa-hand-holding-usd"></i>
-                        <p class="service-text">Te ofrecemos la mejor tarifa del mercado</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+        <div class="card">
+            <div class="card-body">
 
+                <h1 class="card-title title-main">PRODUCTOS RESTRINGIDOS</h1>
+
+                <p>
+                    <b>INTERNATIONAL BOX CR</b> le recuerda a todos nuestros clientes que el Ministerio de Hacienda de Costa Rica de la mano con
+                    Procomer (La Promotora del Comercio Exterior de Costa Rica) y Ministerio de Salud, aunado a esto las regulaciones que dicta  la Administración de Seguridad en el
+                    Transporte TSA (por sus siglas en ingles) para con las aerolíneas algunas productos pueden generar costos y tramites adicionales o en su totalidad su
+                    importación queda restringida para estos casos; recomendamos escribirnos a <a href="mailto:info@interboxcr.com">info@interboxcr.com</a> para brindarles la asesoría necesaria.
+                </p>
+
+                <p>A continuacion algunos articulos con restricción:</p>
+
+                <ol>
+                    <li>Armas de fuegos o Armas blancas</li>
+                    <li>Carbón</li>
+                    <li>Materiales explosivos.</li>
+                    <li>Cosméticos, artículos de tocador y fragancias, Perfumes , Aerosoles , Champú,  Keratina, ampolla para el Cabello</li>
+                    <li>Tabacos (cigarros)</li>
+                    <li>Alimentos todo tipo</li>
+                    <li>Bebidas Alcohólica (Vino, Ron, etc)</li>
+                    <li>Dinero en efectivo – Tarjetas de Crédito – Cheques, Valores, efectivo, cheques de    viajero</li>
+                    <li>Todo tipo de extintores en cualquier forma y/o presentación</li>
+                    <li>Todo tipo de sustancias o materiales infecciosos</li>
+                    <li>Pruebas de laboratorio</li>
+                    <li>Organismos virales y cultivos de bacterias infecciosas</li>
+                    <li>Todo tipo de cilindros con gases y aire comprimido</li>
+                    <li>Animales vivos o muertos</li>
+                    <li>Elementos radioactivos</li>
+                    <li>Medicinas</li>
+                    <li>Semillas</li>
+                    <li>Plantas</li>
+                    <li>Venenos</li>
+                    <li>Productos alucinógenos</li>
+                </ol>
+            </div>
+        </div>
+    </section>
+</div>
 <footer class="">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12">
                 <nav class="nav justify-content-center footer-nav">
