--- a/app/seguro.html
+++ b/app/seguro.html
@@ -5,12 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>InterBox Cr</title>
+    <title>InterBox Cr | Seguro</title>
     <link rel="icon" type="image/png" href="img/favico.png" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
-<body class="page f-fb">
+<body class="page">
 <header class="header fixed-top">
     <div class="sub-header">
         <div class="container">
@@ -35,56 +35,55 @@
         </div>
     </div>
 </header>
-<div class="banner">
-    <div class="main-banner text-center">
-        <div class="sub-back"></div>
-        <div class="container">
-            <h1>Bienvenido a International Box CR</h1>
-            <h5>Transporte de cargas simple, veloz y económico</h5>
+<div class="container">
+    <section class="seguro">
+        <div class="title-box">
+            <div class="title-box-b"></div>
+            <h3 class="title-text"></h3>
         </div>
-    </div>
-</div>
-<section class="services py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-6 col-sm-6 col-md-3 mb-2 mb-md-0">
-                <div class="card text-center service-card">
-                    <div class="card-body">
-                        <i class="fas fa-plane"></i>
-                        <p class="service-text">Despacho aereo diario de USA  a Costa Rica</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-3 mb-2 mb-md-0">
-                <div class="card text-center service-card">
-                    <div class="card-body">
-                        <i class="fas fa-shield-alt"></i>
-                        <p class="service-text">Todas tus compras con nosotros viajan aseguradas</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-3 mb-2 mb-md-0">
-                <div class="card text-center service-card">
-                    <div class="card-body">
-                        <i class="fas fa-people-carry"></i>
-                        <p class="service-text">Entregamos en la puerta de tu casa u oficina</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-3 mb-2 mb-md-0">
-                <div class="card text-center service-card">
-                    <div class="card-body">
-                        <i class="fas fa-hand-holding-usd"></i>
-                        <p class="service-text">Te ofrecemos la mejor tarifa del mercado</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+        <div class="card">
+            <div class="card-body">
 
+                <h1 class="card-title title-main">¿QUE SEGURO OFRECE INTERBOX CR?</h1>
+
+                <p>Ahora comprar por Internet es mucho más seguro gracias a Interbox CR.</p>
+
+                <p>Por un costo de apenas $1.50 su mercancía tiene los seguros necesarios en un 100% hasta su destino final.</p>
+
+                <p>Pautas del seguro:</p>
+
+                <ol>
+                    <li>Cubrimos el 100% del valor de la mercancía según la factura que adjunto el cliente al momento de realizar la pre-alerta.</li>
+                    <li>La empresa tiene un plazo de 30 días hábiles para realizar el pago, después de recibido el reclamo con la orden de compra original.</li>
+                    <li>Se responde por guías extraviadas y hurtadas luego de certificada la recepción por Interbox CR.</li>
+                    <li>Se responde por mercancía dañada por manipulación siempre y cuando cuente con el embalaje adecuado, de lo contrario el reclamo debe hacerse al proveedor.</li>
+                    <li>Si para el traslado nacional el cliente elije cualquier otra empresa de envíos, no respondemos por daños o perdidas.</li>
+                    <li>Si el cliente no revisa su mercancía frente a nuestro personal al momento de recibirla no podrá luego realizar reclamo de pérdida o daño ya que el mismo no procederá.</li>
+                    <li>En el momento que la empresa declare perdida o daño de un paquete, el cliente tiene un plazo de 10 días hábiles para enviar la orden de compra, de no ser recibida en este lapso el mismo no procederá.</li>
+                    <li>Interbox CR maneja un lapso de 15 días para realizar la búsqueda física del paquete junto a la investigación pertinente antes de declarar una mercancía como perdida.</li>
+                    <li>No respondemos por circunstancias fuera de nuestro control:</li>
+                    <ul>
+                        <li> Desastres Naturales</li>
+                        <li>Huracanes</li>
+                        <li> Terremotos</li>
+                        <li>Inundaciones</li>
+                        <li>Ciclones</li>
+                        <li>Accidentes aéreos</li>
+                        <li>Terrorismo</li>
+                        <li>Accidentes de guerra</li>
+                        <li>Daños eléctricos o magnéticos</li>
+                        <li>Saqueos</li>
+                    </ul>
+                    <li>Si el transporte de un envió comprende un destino final o paradas en un país distinto al de salida, se podrá aplicar el convenio de Varsovia para los
+                        efectos de este contrato rige ese convenio en la mayoría de los casos,
+                        adicionalmente limita nuestra responsabilidad por pérdidas o daño al envió.</li>
+                </ol>
+            </div>
+        </div>
+    </section>
+</div>
 <footer class="">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12">
                 <nav class="nav justify-content-center footer-nav">
