--- a/app/login.html
+++ b/app/login.html
@@ -1,21 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>InterBox Cr | Ingresar</title>
+    <link rel="icon" type="image/png" href="img/favico.png" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
-<body class="page f-fb">
+<body class="page">
 <header class="header fixed-top">
     <div class="sub-header">
         <div class="container">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="/"><img src="img/interbox_logo.png" alt="logo" class="img-fluid main-logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -27,7 +29,6 @@
                     <ul class="navbar-nav justify-content-end">
                         <li class="nav-item"><a class="nav-link" href="register.html">Registrate</a></li>
                         <li class="nav-item"><a class="nav-link active" href="login.html">Ingresar</a></li>
-                        <li class="nav-item"><a class="nav-link" href="forgot.html">Olvidaste tu contraseña?</a></li>
                     </ul>
                 </div>
             </nav>
@@ -60,6 +61,13 @@
                                 <label class="form-check-label" for="exampleCheck1">Guardar tu email y contraseña?</label>
                             </div>
                             <button type="submit" class="btn btn-primary btn-block">Ingresar</button>
+
+                            <br>
+
+                            <h5 class="text-center"> - O - </h5>
+
+                            <a class="btn btn-info btn-block" href="forgot.html">Olvidaste tu contraseña?</a>
+
                         </form>
                     </div>
                 </div>
@@ -79,6 +87,15 @@
                     <a class="nav-link" href="restringidos.html">Productos Restringidos</a>
                     <a class="nav-link" href="seguro.html">Seguro que ofrece INTERBOX CR</a>
                 </nav>
+            </div>
+            <div class="col-12">
+                <div class="social">
+                    <nav class="nav justify-content-center footer-nav">
+                        <a class="nav-link" href="https://www.facebook.com/InternationalBox"> <i class="fab fa-facebook"></i> </a>
+                        <a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
+                    </nav>
+                </div>
             </div>
             <div class="col-12">
                 <p class="copy text-center">
