target blank fb

--- a/app/restringidos.html
+++ b/app/restringidos.html
@@ -97,7 +97,7 @@
             <div class="col-12">
                 <div class="social">
                     <nav class="nav justify-content-center footer-nav">
-                        <a class="nav-link" href="https://www.facebook.com/InternationalBox"> <i class="fab fa-facebook"></i> </a>
+                        <a class="nav-link" target="_blank" href="https://www.facebook.com/InternationalBox"> <i class="fab fa-facebook"></i> </a>
                         <a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
                         <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
                     </nav>
